# libpcmseq

./: .gitignore  CMakeLists.txt
include/libpcm/: clip.h  generate.h  mixer.h  sample.h  types.h  voice.h
include/libpcm/wave/: sine.h  square.h  wave.h
include/libpcmseq/: clip.h  mixer.h  sample.h  types.h  voice.h
libpcmseq/: CMakeLists.txt  clip.c  libpcmseq.c  mixer.c
libpcmseq/include/: libpcmseq.h
libpcmseq/include/libpcmseq/: clip.h  mixer.h  types.h  voice.h
src/: clip.c  generate.c  mixer.c  sample.c  voice.c
src/wave/: sine.c  square.c  wave.c
